[tool.poetry]
name = "django-example"
version = "0.1.0"
description = ""
authors = ["Guillaume Pluchon <guillaume.pluchon@yahoo.com>"]
readme = "README.md"
packages = [{include = "django_example"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
